Primeira alteração completa

--- a/style.css
+++ b/style.css
@@ -1,11 +1,36 @@
 body {
-  background-color: #f8f9fa;
+  background-color: #F9DEC9;
+  font-family: "Alan Sans", sans-serif;
+  font-weight: 400; /* ou 700 para bold */
+  font-optical-sizing: auto;
 }
 
 h1, h2 {
-  color: #343a40;
+  color: #3A405A;
+  font-family: "Alan Sans", sans-serif;
 }
 
 .navbar-brand {
   font-weight: bold;
 }
+
+.erro {
+      color: red;
+      font-size: 0.9em;
+      margin-top: 4px;
+    }
+
+.servicos {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
+    }
+    .servico {
+      background: white;
+      padding: 15px;
+      border-radius: 8px;
+      box-shadow: 0px 0px 8px rgba(0,0,0,0.1);
+      width: 200px;
+      text-align: center;
+    }
